Revision history for {{$dist->name}}

{{$NEXT}}

1.79      2015-06-19 10:16:08 -0400
  - Add irc option that sets x_IRC meta

1.78      2015-06-11 11:04:52 -0600
  - Support for Perl 5.10.0
    [@Git] does no longer supports the .0 release of 5.10 but we need
    (as with 5.8.x) so make this one work for everything except for
    releases like 5.8.x and MSWin32.

1.77      2015-05-31 15:28:39 -0400
  - Fix bug introduced in 1.75 for Perls as old as 5.20.2
    I was testing this with a 5.22.0 rc

1.76      2015-05-31 14:55:21 -0400
  - When minting a new project, include a .gitattributes file that will make
    sure that GitHub does not misidentify .t files as being Perl 6.

1.75      2015-05-31 14:42:48 -0400
  - Devel::Hide is a true develop only prereq.
    A bug introduced in 1.71 was that Devel::Hide was needed for all
    of the tests to pass.

1.74      2015-05-28 10:37:17 -0400
  - Fix test broken in last version when installed (not upgraded)

1.73      2015-05-28 09:08:00 -0400
  - Remove [Author::Plicease::PrePodWeaver]
  - Explicitly require Perl 5.8.1

1.72      2015-05-27 17:26:27 -0400
  - Remove [Author::Plicease::Resources]
  - Remove [Author::Plicease::PrePodWeaver] from bundle
  - Merge [Author::Plicease::InstallerPerlVersion] into [Author::Plicease::SpecialPrereqs]
  - The optional behavior inside [Author::Plicease::InstallerPerlVersion] is
    now on by default via [Author::Plicease::SpecialPrereqs]
  - Merge [Author::Plicease::Recommend] into [Author::Plicease::SpecialPrereqs]
  - Merge [Author::Plicease::FiveEight] into [Author::Plicease::SpecialPrereqs]

1.71      2015-05-27 15:23:38 -0400
  - Added scp_dest and url options to [Author::Plicease::Upload]
  - Added example/unbundle.pl for unbundling
  - Removed Dist::Zilla::Plugin::Author::Plicease::OSPrereqsNot
  - Removed Dist::Zilla::Plugin::Author::Plicease::TransformTravis
  - Added test for minting profile